Fix progress bar vertical alignment

--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ button:active {
   background: var(--bg-darker);
   border-radius: 6px;
   height: 12px;
+  line-height: 0;
   margin-bottom: 6px;
   overflow: hidden;
 }
@@ -422,6 +423,8 @@ button:active {
   background: var(--accent);
   height: 100%;
   width: 0;
+  display: block;
+  border-radius: inherit;
   transition: width 0.3s;
 }
 .bargeCard h2 {
